deploy: 18dbb1de878179a89f57cf97869b10178e2d9e0e

--- a/python/genindex.html
+++ b/python/genindex.html
@@ -290,16 +290,22 @@
         <li><a href="sudachipy.morpheme.html#sudachipy.morpheme.Morpheme.part_of_speech">(sudachipy.morpheme.Morpheme method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="sudachipy.html#sudachipy.Morpheme.part_of_speech_id">part_of_speech_id() (sudachipy.Morpheme method)</a>
 
       <ul>
         <li><a href="sudachipy.morpheme.html#sudachipy.morpheme.Morpheme.part_of_speech_id">(sudachipy.morpheme.Morpheme method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="sudachipy.html#sudachipy.WordInfo.pos_id">pos_id (sudachipy.WordInfo attribute)</a>
 </li>
+      <li><a href="sudachipy.html#sudachipy.Dictionary.pos_matcher">pos_matcher() (sudachipy.Dictionary method)</a>
+
+      <ul>
+        <li><a href="sudachipy.dictionary.html#sudachipy.dictionary.Dictionary.pos_matcher">(sudachipy.dictionary.Dictionary method)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
