deploy: 6a2d20db85cb67a931a54ed7031c391027a8863a

--- a/python/genindex.html
+++ b/python/genindex.html
@@ -306,6 +306,12 @@
         <li><a href="sudachipy.dictionary.html#sudachipy.dictionary.Dictionary.pos_matcher">(sudachipy.dictionary.Dictionary method)</a>
 </li>
       </ul></li>
+      <li><a href="sudachipy.html#sudachipy.Dictionary.pre_tokenizer">pre_tokenizer() (sudachipy.Dictionary method)</a>
+
+      <ul>
+        <li><a href="sudachipy.dictionary.html#sudachipy.dictionary.Dictionary.pre_tokenizer">(sudachipy.dictionary.Dictionary method)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
