deploy: 4ab7a274fe2d96aee7c3fabf8d98beaf5fec3117

--- a/python/genindex.html
+++ b/python/genindex.html
@@ -300,14 +300,20 @@
         <li><a href="api/sudachipy.morpheme.html#sudachipy.morpheme.Morpheme.part_of_speech_id">(sudachipy.morpheme.Morpheme method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sudachipy.html#sudachipy.WordInfo.pos_id">pos_id (sudachipy.WordInfo attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sudachipy.html#sudachipy.Dictionary.pos_matcher">pos_matcher() (sudachipy.Dictionary method)</a>
 
       <ul>
         <li><a href="api/sudachipy.dictionary.html#sudachipy.dictionary.Dictionary.pos_matcher">(sudachipy.dictionary.Dictionary method)</a>
+</li>
+      </ul></li>
+      <li><a href="api/sudachipy.html#sudachipy.Dictionary.pos_of">pos_of() (sudachipy.Dictionary method)</a>
+
+      <ul>
+        <li><a href="api/sudachipy.dictionary.html#sudachipy.dictionary.Dictionary.pos_of">(sudachipy.dictionary.Dictionary method)</a>
 </li>
       </ul></li>
       <li><a href="api/sudachipy.html#sudachipy.Dictionary.pre_tokenizer">pre_tokenizer() (sudachipy.Dictionary method)</a>
