deploy: 282be2b99af44186f80aa59d14ef4c8ad4340c01

--- a/python/genindex.html
+++ b/python/genindex.html
@@ -236,6 +236,14 @@
       <li><a href="api/sudachipy.html#sudachipy.WordInfo.length">length() (sudachipy.WordInfo method)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sudachipy.html#sudachipy.Dictionary.lookup">lookup() (sudachipy.Dictionary method)</a>
+
+      <ul>
+        <li><a href="api/sudachipy.dictionary.html#sudachipy.dictionary.Dictionary.lookup">(sudachipy.dictionary.Dictionary method)</a>
+</li>
+      </ul></li>
+  </ul></td>
 </tr></table>
 
 <h2 id="M">M</h2>
