--- a/python/genindex.html
+++ b/python/genindex.html
@@ -261,6 +261,12 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sudachipy.html#sudachipy.Tokenizer.mode">mode (sudachipy.Tokenizer attribute)</a>
+
+      <ul>
+        <li><a href="api/sudachipy.tokenizer.html#sudachipy.tokenizer.Tokenizer.mode">(sudachipy.tokenizer.Tokenizer attribute)</a>
+</li>
+      </ul></li>
       <li>
     module
 
